--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -22,6 +22,7 @@ jobs:
           distribution: 'temurin'
           cache: 'maven'
 
+      # User mvnw because automatically download and run maven with that guaranteed version.
       - name: Make mvnw executable
         run: chmod +x ./mvnw
 
@@ -30,3 +31,40 @@ jobs:
 
       - name: Run tests (using Maven Wrapper)
         run: ./mvnw -B test
+      
+      - name: Publish JAR Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: springboot-jar
+          path: target/*.jar
+  
+  cd:
+    name: Deploy to GKE
+    needs: ci
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Download JAR Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: springboot-jar      
+      # Create Docker image and push to GAR
+      - name: 'Authenticate to Google Cloud'
+        uses: 'google-github-actions/auth@v1'
+        with:
+          create_credentials_file: true
+          workload_identity_provider: 'projects/988278378910/locations/global/workloadIdentityPools/github-pool/providers/github-provider'
+          service_account: 'github-actions@amazing-gearing-480202-f2.iam.gserviceaccount.com'
+      
+         
+
+
+
+    # TODO: Add JAR file name as environment variable
+
+
+    # Update image in HELM chart of app)
+ 
