--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -42,6 +42,9 @@ jobs:
     name: Deploy to GKE
     needs: ci
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
 
     steps:
       - name: Checkout
