--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -46,6 +46,9 @@ jobs:
       id-token: write
       contents: read
 
+    env:
+      IMAGE: us-central1-docker.pkg.dev/your-project/your-repo/your-app
+      
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -54,20 +57,20 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: springboot-jar      
-      # Create Docker image and push to GAR
-      - name: 'Authenticate to Google Cloud'
-        uses: 'google-github-actions/auth@v1'
+
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v1
         with:
           create_credentials_file: true
           workload_identity_provider: 'projects/988278378910/locations/global/workloadIdentityPools/github-pool/providers/github-provider'
           service_account: 'github-actions@amazing-gearing-480202-f2.iam.gserviceaccount.com'
       
-         
+      - name: Docker login to GAR
+        run: gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
 
-
-
-    # TODO: Add JAR file name as environment variable
-
-
-    # Update image in HELM chart of app)
- 
+      - name: Build & Push Docker image
+        run: |
+          VERSION=${GITHUB_REF#refs/tags/v}
+          docker build . -t ${{ env.IMAGE }}:$VERSION -t ${{ env.IMAGE }}:latest
+          docker push ${{ env.IMAGE }}:$VERSION
+          docker push ${{ env.IMAGE }}:latest
