using docker hub

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,12 +1,11 @@
 name: CICD
 
 on:
-  push:
-    branches: ["main"]
   pull_request:
-
+    branches: [ "main" ]
+  push:
+    branches: [ "main" ]
 jobs:
-
   ci:
     name: Build & Test Java App
     runs-on: ubuntu-latest
@@ -32,7 +31,7 @@ jobs:
       - name: Run tests (using Maven Wrapper)
         run: ./mvnw -B test
       
-      - name: Publish JAR Artifact
+      - name: Upload JAR Artifact
         uses: actions/upload-artifact@v4
         with:
           name: springboot-jar
@@ -42,15 +41,18 @@ jobs:
     name: Deploy to GKE
     needs: ci
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write
-      contents: read
-
+    if: github.ref == 'refs/heads/main'
+    # Use for OIDC authentication with Workload Identity Federation
+    #permissions:
+    #  id-token: write
+    #  contents: read
+    
+    # Use
     env:
       IMAGE: us-central1-docker.pkg.dev/amazing-gearing-480202-f2/portfolio-apps/java-app
 
     steps:
-      - name: Checkout
+      - name: Checkout Code
         uses: actions/checkout@v4
 
       - name: Download JAR Artifact
@@ -58,38 +60,18 @@ jobs:
         with:
           name: springboot-jar
           path: target/
-      
-      - name: Generate version tag
-        id: version
-        run: |
-          SHORT_SHA=$(git rev-parse --short HEAD)
 
-          # Try to read project version via Maven (preferred)
-          if command -v mvn >/dev/null 2>&1; then
-            POM_VERSION=$(mvn -q -DforceStdout help:evaluate -Dexpression=project.version)
-          else
-            # Fallback: simple grep from pom.xml (works for common single-module poms)
-            POM_VERSION=$(grep -m1 -oP '(?<=<version>)[^<]+' pom.xml || echo "unknown")
-          fi
-
-          # Compose version including pom version and short commit sha
-          VERSION="${POM_VERSION}-${SHORT_SHA}"
-
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
-          echo "pom_version=$POM_VERSION" >> $GITHUB_OUTPUT
-
-      - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v1
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
-          create_credentials_file: true
-          workload_identity_provider: 'projects/988278378910/locations/global/workloadIdentityPools/github-pool/providers/github-provider'
-          service_account: 'github-actions@amazing-gearing-480202-f2.iam.gserviceaccount.com'
-      
-      - name: Docker login to GAR
-        run: gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build & Push Docker image
-        run: |         
-          docker build . -t ${{ env.IMAGE }}:${{ steps.version.outputs.version }} -t ${{ env.IMAGE }}:latest
-          docker push ${{ env.IMAGE }}:${{ steps.version.outputs.version }}
-          docker push ${{ env.IMAGE }}:latest
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/javaapp:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/javaapp:${{ github.sha }}
